add menu spacing